Added testing and broke more color functions out.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -10,8 +10,7 @@ EXECUTABLE=test
 all: $(SOURCES) $(EXECUTABLE)
 
 clean:
-	rm *.o
-	rm fakes/*.o
+	rm -rf .build
 	rm $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS) 
